tree-sitter-sqlpygen/corpus/schema2.txt
===================
Schema 2: Uppercase
===================

schema table_stocks
CREATE TABLE stocks (
    date text,
    trans text,
    symbol text,
    qty real,
    price real
) ;

---

(source_file
    (schema_fn (identifier) (schema_sql))
)

